feat: restructure views and controllers for home management and contact forms

--- a/airbnb/views/host/addHome.ejs
+++ b/airbnb/views/host/addHome.ejs
@@ -1,5 +1,5 @@
-<%- include('partials/header') %>
-  <%- include('partials/navbar') %>
+<%- include('../partials/header') %>
+  <%- include('../partials/navbar') %>
     <header class="bg-red-400 py-6 mb-6 shadow">
       <h1 class="text-3xl text-center text-white font-bold">Enter Your House Here</h1>
     </header>
@@ -44,4 +44,4 @@
           class="w-full bg-red-400 text-white font-semibold py-2 rounded hover:bg-blue-700 transition">Submit</button>
       </form>
     </main>
-    <%- include('partials/footer') %>
+    <%- include('../partials/footer') %>
