--- a/airbnb/views/support/contact.ejs
+++ b/airbnb/views/support/contact.ejs
@@ -1,5 +1,5 @@
-<%- include('partials/header') %>
-<%- include('partials/navbar') %>
+<%- include('../partials/header') %>
+<%- include('../partials/navbar') %>
   <header>
     <h1 class="text-3xl font-bold underline text-center">
       Enter your detail:
@@ -14,4 +14,4 @@
       <input type='submit'></input>
     </form>
   </main>
-<%- include('partials/footer') %>
+<%- include('../partials/footer') %>
