--- a/airbnb/views/store/home-page.ejs
+++ b/airbnb/views/store/home-page.ejs
@@ -1,5 +1,5 @@
-<%- include('partials/header') %>
-<%- include('partials/navbar') %>
+<%- include('../partials/header') %>
+<%- include('../partials/navbar') %>
  <header class="bg-gradient-to-r from-green-500 to-red-400 py-12 shadow mb-8">
   <div class="container mx-auto text-center">
     <h1 class="text-5xl md:text-7xl font-extrabold text-white mb-4 drop-shadow-lg">Welcome to Airbnb</h1>
@@ -33,4 +33,4 @@
     <a href="/hosts/homes" class="inline-block bg-blue-600 text-white font-semibold px-8 py-3 rounded-full shadow hover:bg-blue-700 transition">Browse Homes</a>
   </section>
 </main>
-<%- include('partials/footer') %>
+<%- include('../partials/footer') %>
