--- a/airbnb/views/store/homes-list.ejs
+++ b/airbnb/views/store/homes-list.ejs
@@ -1,5 +1,5 @@
-<%- include('partials/header') %>
-  <%- include('partials/navbar') %>
+<%- include('../partials/header') %>
+  <%- include('../partials/navbar') %>
     <main class="bg-gray-50">
       <div class="container mx-auto">
         <h1>List of Homes: </h1>
@@ -33,4 +33,4 @@
             <% } %>
       </div>
     </main>
-    <%- include('partials/footer') %>
+    <%- include('../partials/footer') %>
