--- a/airbnb/views/host/homeAdded.ejs
+++ b/airbnb/views/host/homeAdded.ejs
@@ -1,5 +1,5 @@
-<%- include('partials/header') %>
-<%- include('partials/navbar') %> 
+<%- include('../partials/header') %>
+<%- include('../partials/navbar') %> 
   <header>
     <h1>Home Added Successfully!</h1>
     <ul>
@@ -10,4 +10,4 @@
         <%= home.email %>
       </li>
     </ul>
-  </header><%- include('partials/footer') %>
+  </header><%- include('../partials/footer') %>
