--- a/airbnb/views/partials/navbar.ejs
+++ b/airbnb/views/partials/navbar.ejs
@@ -5,5 +5,6 @@
     <a href="/hosts/add-home" class="text-blue-500 hover:underline">Add Home</a>
     <a href="/hosts/homes" class="text-blue-500 hover:underline">View Homes</a>
     <a href="/contact-us" class="text-blue-500 hover:underline">Contact Us</a>
+    <a href="/favourite-list" class="text-blue-500 hover:underline">Favourites</a>
   </div>
 </nav>
